# Trackify

./: CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  docker-compose.yaml  k8s-manifest.yaml
.github/workflows/: ci-cd.yml
Database/: entries_test.sql  goals_test.sql  init.sql  mails_test.sql  user_test.sql
Documentation/: chart.txt
Entries-Service/: .env.example  pyproject.toml  requirements.txt
Entries-Service/src/: auth.py  config.py  database.py  goals_client.py  main.py  schemas.py
Entries-Service/test/: test_main.py
Goals-Service/: .env.example  Dockerfile  pyproject.toml
Goals-Service/src/: auth.py  config.py  database.py  entries_client.py  main.py  schemas.py
Goals-Service/test/: test_main.py
Mailer-Service/: .env.example  pyproject.toml  requirements.txt
Mailer-Service/src/: auth.py  config.py  database.py  main.py  pdf_client.py  schemas.py  ses_client.py
Mailer-Service/test/: test_main.py
PDF-Service/: .env.example  .gitignore  pyproject.toml  requirements.txt
PDF-Service/src/: auth.py  config.py  database.py  entries_client.py  goals_client.py  main.py  pdf_generator.py  schemas.py  user_client.py
PDF-Service/test/: test_main.py
UI/: .dockerignore  .env  .env.example  Dockerfile  _redirects  index.html  package-lock.json  package.json  tailwind.config.ts
UI/public/: _redirects
UI/src/: App.tsx  index.css
UI/src/components/: APIDebugPanel.tsx  ProtectedRoute.tsx
UI/src/components/goals/: AddHoursDialog.tsx  CreateGoalDialog.tsx  WorkEntryList.tsx
UI/src/components/layout/: Header.tsx
UI/src/components/ui/: button.tsx  progress.tsx
UI/src/context/: AuthContext.tsx
UI/src/controllers/: useEntriesController.ts  useGoalsController.ts  useUserController.ts
UI/src/data/: mockData.ts
UI/src/lib/: api-config.ts  entries-api.ts  goals-api.ts  mailer-api.ts  pdf-api.ts  user-api.ts  utils.ts
UI/src/models/: GoalModel.ts  UserModel.ts
UI/src/pages/: AuthCallback.tsx  Dashboard.tsx  GoalDetail.tsx  Login.tsx  LoginExample.tsx  UserSettings.tsx
UI/src/types/: goal.ts
UI/src/views/dashboard/: GoalsSection.tsx  StatsGrid.tsx  WelcomeHeader.tsx
UI/src/views/goals/: GoalCardView.tsx
User-Service/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
User-Service/src/: auth.py  config.py  database.py  main.py  schemas.py
User-Service/test/: test_main.py
