[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entries-service"
version = "0.1.0"
description = "Time Entries Microservice for logging hours and time tracking"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.104.1",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
